made loading pad reset index and cleaned up package a bit

--- a/client.html
+++ b/client.html
@@ -152,8 +152,10 @@
 				  */
 					if(evt.target.id=="fileTx")
 					{
+						txIndex=0;
 				  	transmitPad=e.target.result;
 					} else {
+						rxIndex=0;
 						receivePad=e.target.result;
 					}
 				};
